[package]
name = "pngme"
version = "0.1.0"
edition = "2021"
authors = ["trybefore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "decoding"
harness = false

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive", "cargo"] }
crc = "3.0.0"
